--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -24,7 +24,7 @@ env:
   GKE_CLUSTER: gke-cluster
   IMAGE: gke-test
   REGISTRY_HOSTNAME: gcr.io
-  DEPLOYMENT_NAME: gke-node-with-feathers
+  DEPLOYMENT_NAME: node-with-feathers
 
 jobs:
   setup-build-publish-deploy:
@@ -59,18 +59,11 @@ jobs:
     - name: Publish
       run: |
         docker push $REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE:$GITHUB_SHA
-        
-    # Set up kustomize
-    - name: Set up Kustomize
-      run: |
-        curl -o kustomize --location https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-        chmod u+x ./kustomize
 
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |
         gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project $GKE_PROJECT
-        ./kustomize edit set image $REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE:${GITHUB_SHA}
-        ./kustomize build . | kubectl apply -f -
+        kubectl apply -f ./gke/deployment.yaml -f ./gke/ingress.yaml
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
