--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -65,5 +65,5 @@ jobs:
       run: |
         gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project $GKE_PROJECT
         kubectl apply -f ./gke/deployment.yaml -f ./gke/ingress.yaml
-        kubectl rollout status deployment/$DEPLOYMENT_NAME
-        kubectl get services -o wide
+        # kubectl rollout status deployment/$DEPLOYMENT_NAME
+        # kubectl get services -o wide
