--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -59,13 +59,18 @@ jobs:
     - name: Publish
       run: |
         docker push $REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE:$GITHUB_SHA
-
+    
+    # Set up kustomize
+    - name: Set up Kustomize
+      run: |
+        curl -o kustomize --location https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
+        chmod u+x ./kustomize
+        
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |
         gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project $GKE_PROJECT
-        chmod u+x ./gke/deployment.yaml
-        ./gke/deployment.yaml edit set image $REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE:${GITHUB_SHA}
-        kubectl apply -f ./gke/deployment.yaml -f ./gke/ingress.yaml
+        ./kustomize edit edit set image $REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE:${GITHUB_SHA}
+        kubectl apply -f -
         # kubectl rollout status deployment/$DEPLOYMENT_NAME
         # kubectl get services -o wide
