--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -59,18 +59,13 @@ jobs:
     - name: Publish
       run: |
         docker push $REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE:$GITHUB_SHA
-    
-    # Set up kustomize
-    - name: Set up Kustomize
-      run: |
-        curl -o kustomize --location https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-        chmod u+x ./kustomize
-        
+
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |
         gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project $GKE_PROJECT
-        ./kustomize edit set image gcr.io/${{ secrets.GKE_PROJECT }}/gke-test:${{ github.sha }}
-        ./kustomize build . | kubectl apply -f -
+        kubectl set env ./deployment.yml HOST=${{ secrets.ENV_HOST }} PORT=${{ secrets.ENV_PORT }} PUBLIC=${{ secrets.ENV_PUBLIC }} PAGINATE=${{ secrets.ENV_PAGINATE }} AUTHENTICATION=${{ secrets.ENV_AUTHENTICATION }} MYSQL=${{ secrets.ENV_MYSQL }} -o yaml
+        kubectl set image -f ./deployment.yml $REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE:$GITHUB_SHA --local -o yaml
+        kubectl apply -f ./deployment.yml -f service.yml
         # kubectl rollout status deployment/$DEPLOYMENT_NAME
         # kubectl get services -o wide
