--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -65,7 +65,7 @@ jobs:
       run: |
         gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project $GKE_PROJECT
         kubectl apply -f deployment.yml -f service.yml
-        kubectl set env --all deployment/$DEPLOYMENT_NAME HOST=${{ secrets.ENV_HOST }} PORT=${{ secrets.ENV_PORT }} PUBLIC=${{ secrets.ENV_PUBLIC }} PAGINATE=${{ secrets.ENV_PAGINATE }} AUTHENTICATION=${{ secrets.ENV_AUTHENTICATION }} MYSQL=${{ secrets.ENV_MYSQL }} -o yaml
+        # kubectl set env --all deployment/$DEPLOYMENT_NAME HOST=${{ secrets.ENV_HOST }} PORT=${{ secrets.ENV_PORT }} PUBLIC=${{ secrets.ENV_PUBLIC }} PAGINATE=${{ secrets.ENV_PAGINATE }} AUTHENTICATION=${{ secrets.ENV_AUTHENTICATION }} MYSQL=${{ secrets.ENV_MYSQL }} -o yaml
         kubectl set image -f deployment.yml api=$REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE:$GITHUB_SHA -o yaml
         # kubectl rollout status deployment/$DEPLOYMENT_NAME
         # kubectl get services -o wide
