--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -20,7 +20,7 @@ env:
   GKE_PROJECT: ${{ secrets.GKE_PROJECT }}
   GKE_EMAIL: ${{ secrets.GKE_EMAIL }}
   GITHUB_SHA: ${{ github.sha }}
-  GKE_ZONE: asia-southeast1
+  GKE_ZONE: asia-southeast1-a
   GKE_CLUSTER: gke-cluster
   IMAGE: gke-test
   REGISTRY_HOSTNAME: gcr.io
@@ -63,8 +63,9 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |
-        gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project $GKE_PROJECT
-        kubectl apply -f deployment.yml -f service.yml
+        gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project /"$GKE_PROJECT"/"$IMAGE"
+        kubectl set env --all deployment/$DEPLOYMENT_NAME HOST=${{ secrets.ENV_HOST }} PORT=${{ secrets.ENV_PORT }} PUBLIC=${{ secrets.ENV_PUBLIC }} PAGINATE=|${{ secrets.ENV_PAGINATE }} AUTHENTICATION=|${{ secrets.ENV_AUTHENTICATION }} MYSQL=${{ secrets.ENV_MYSQL }} -o yaml
         kubectl set image -f deployment.yml api=$REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE:$GITHUB_SHA -o yaml
+        kubectl apply -f deployment.yml -f service.yml
         # kubectl rollout status deployment/$DEPLOYMENT_NAME
         # kubectl get services -o wide
