--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -22,7 +22,7 @@ env:
   GITHUB_SHA: ${{ github.sha }}
   GKE_ZONE: asia-southeast1-a
   GKE_CLUSTER: gke-cluster
-  IMAGE: gke-test
+  IMAGE: node-with-feathers-image
   REGISTRY_HOSTNAME: gcr.io
   DEPLOYMENT_NAME: node-with-feathers
 
@@ -64,8 +64,8 @@ jobs:
     - name: Deploy
       run: |
         gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project /"$GKE_PROJECT"/"$IMAGE"
+        kubectl apply -f deployment.yml -f service.yml
         kubectl set env --all deployment/$DEPLOYMENT_NAME HOST=${{ secrets.ENV_HOST }} PORT=${{ secrets.ENV_PORT }} PUBLIC=${{ secrets.ENV_PUBLIC }} PAGINATE=|${{ secrets.ENV_PAGINATE }} AUTHENTICATION=|${{ secrets.ENV_AUTHENTICATION }} MYSQL=${{ secrets.ENV_MYSQL }} -o yaml
         kubectl set image -f deployment.yml api=$REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE:$GITHUB_SHA -o yaml
-        kubectl apply -f deployment.yml -f service.yml
         # kubectl rollout status deployment/$DEPLOYMENT_NAME
         # kubectl get services -o wide
