--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -20,7 +20,7 @@ env:
   GKE_PROJECT: ${{ secrets.GKE_PROJECT }}
   GKE_EMAIL: ${{ secrets.GKE_EMAIL }}
   GITHUB_SHA: ${{ github.sha }}
-  GKE_ZONE: asia-southeast1
+  GKE_ZONE: asia-southeast1-a
   GKE_CLUSTER: gke-cluster
   IMAGE: gke-test
   REGISTRY_HOSTNAME: gcr.io
