--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -17,14 +17,20 @@ on:
 
 # Environment variables available to all jobs and steps in this workflow
 env:
+  GITHUB_SHA: ${{ github.sha }}
   GKE_PROJECT: ${{ secrets.GKE_PROJECT }}
   GKE_EMAIL: ${{ secrets.GKE_EMAIL }}
-  GITHUB_SHA: ${{ github.sha }}
-  GKE_ZONE: asia-southeast1-a
-  GKE_CLUSTER: gke-cluster
-  IMAGE: gke-test
-  REGISTRY_HOSTNAME: gcr.io
-  DEPLOYMENT_NAME: node-with-feathers
+  GKE_ZONE: ${{ secrets.GKE_ZONE }}
+  GKE_CLUSTER: ${{ secrets.GKE_CLUSTER }}
+  GKE_DEPLOYMENT_NAME: ${{ secrets.GKE_DEPLOYMENT_NAME }}
+  IMAGE_NAME: ${{ secrets.IMAGE_NAME }}
+  REGISTRY_HOSTNAME: ${{ secrets.REGISTRY_HOSTNAME }}
+  ENV_HOST: ${{ secrets.ENV_HOST }}
+  ENV_PORT: ${{ secrets.ENV_PORT }}
+  ENV_PUBLIC: ${{ secrets.ENV_PUBLIC }}
+  ENV_PAGINATE: ${{ secrets.ENV_PAGINATE }}
+  ENV_AUTHENTICATION: ${{ secrets.ENV_AUTHENTICATION }}
+  ENV_MYSQL: ${{ secrets.ENV_MYSQL }}
 
 jobs:
   setup-build-publish-deploy:
@@ -44,8 +50,8 @@ jobs:
     - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
         version: '270.0.0'
-        service_account_email: ${{ secrets.GKE_EMAIL }}
-        service_account_key: ${{ secrets.GKE_KEY }}
+        service_account_email: $GKE_EMAIL
+        service_account_key: $GKE_KEY
 
     # Configure docker to use the gcloud command-line tool as a credential helper
     - run: |
@@ -56,21 +62,21 @@ jobs:
     # Build the Docker image
     - name: Build
       run: |        
-        docker build -t "$REGISTRY_HOSTNAME"/"$GKE_PROJECT"/"$IMAGE":"$GITHUB_SHA" \
+        docker build -t "$REGISTRY_HOSTNAME"/"$GKE_PROJECT"/"$IMAGE_NAME":"$GITHUB_SHA" \
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" .
 
     # Push the Docker image to Google Container Registry
     - name: Publish
       run: |
-        docker push $REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE:$GITHUB_SHA
+        docker push $REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE_NAME:$GITHUB_SHA
 
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |
         gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project "$GKE_PROJECT"
         kubectl apply -f deployment.yml -f service.yml
-        kubectl set env --all deployment/$DEPLOYMENT_NAME HOST=${{ secrets.ENV_HOST }} PORT=${{ secrets.ENV_PORT }} PUBLIC=${{ secrets.ENV_PUBLIC }} PAGINATE=${{ secrets.ENV_PAGINATE }} AUTHENTICATION=${{ secrets.ENV_AUTHENTICATION }} MYSQL=${{ secrets.ENV_MYSQL }} -o yaml
-        kubectl set image -f deployment.yml api=$REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE:$GITHUB_SHA -o yaml
-        # kubectl rollout status deployment/$DEPLOYMENT_NAME
+        kubectl set env --all deployment/$GKE_DEPLOYMENT_NAME HOST=$ENV_HOST PORT=$ENV_PORT PUBLIC=$ENV_PUBLIC PAGINATE=$ENV_PAGINATE AUTHENTICATION=$ENV_AUTHENTICATION MYSQL=$ENV_MYSQL -o yaml
+        kubectl set image -f deployment.yml api=$REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE_NAME:$GITHUB_SHA -o yaml
+        # kubectl rollout status deployment/$GKE_DEPLOYMENT_NAME
         # kubectl get services -o wide
