--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -19,6 +19,7 @@ on:
 env:
   GITHUB_SHA: ${{ github.sha }}
   GKE_PROJECT: ${{ secrets.GKE_PROJECT }}
+  GKE_KEY: ${{ secrets.GKE_KEY }}
   GKE_EMAIL: ${{ secrets.GKE_EMAIL }}
   GKE_ZONE: ${{ secrets.GKE_ZONE }}
   GKE_CLUSTER: ${{ secrets.GKE_CLUSTER }}
