--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -46,6 +46,12 @@ jobs:
       run: ./secrets/decrypt.sh
       env:
         LARGE_SECRET_PASSPHRASE: ${{ secrets.LARGE_SECRET_PASSPHRASE }}
+    
+    - name: Cek ENV $GKE_EMAIL
+      run: cat $GKE_EMAIL
+
+    - name: Cek all ENV
+      run: env
 
     # Setup gcloud CLI
     - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
